--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,13 @@ h1, h2, h3, h4, h5, h6 {
   .back-to-top {
     right: 90px;
   }
+  @media (max-width: 576px) {
+    .back-to-top {
+      right: 15px;
+    }
+  }
 }
+
 
 
 /*--------------------------------------------------------------
@@ -246,7 +252,7 @@ h1, h2, h3, h4, h5, h6 {
 .mobile-nav {
   position: fixed;
   top: 55px;
-  right: 50px;
+  right: 80px;
   bottom: 15px;
   left: 15px;
   z-index: 9999;
@@ -336,11 +342,8 @@ h1, h2, h3, h4, h5, h6 {
   .mobile-nav-toggle {
     right: 90px;
   }
-  .mobile-nav {
-    background-color: #fff;
-  }
-
 }
+
 
 /*--------------------------------------------------------------
 # Hero Section
