--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1239,7 +1239,7 @@ section {
   background-color: #ddd !important;
 }
 
-.portfolio-details .portfolio-details-carousel .owl-dot.active {
+.portfolio-details .portfolio-details-carousel .owl-dot.active, #indicator* .active {
   background-color: #00f !important;
 }
 
@@ -1455,3 +1455,37 @@ section {
 /*--------------------------------------------------------------------------*/
 /*                       My css                                              */
 /*---------------------------------------------------------------------------*/
+
+
+/*--------------------------------------------------------------
+# admin css
+--------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
+# formulaire
+--------------------------------------------------------------*/
+#formulaire {
+  padding:  30px;
+}
+
+.formulaire .php-email-form button[type="submit"] {
+  background: #00f;
+  border: 0;
+  padding: 10px 24px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 4px;
+}
+
+.formulaire .php-email-form button[type="submit"]:hover {
+  background: #5faee3;
+}
+
+table {
+  margin:auto;
+  text-align: center;
+  border-collapse: collapse;
+}
+td {
+  padding: 3px;
+}
