protection de la page admin par un compte

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1464,11 +1464,8 @@ section {
 /*--------------------------------------------------------------
 # formulaire
 --------------------------------------------------------------*/
-#formulaire {
-  padding:  30px;
-}
 
-.formulaire .php-email-form button[type="submit"] {
+.formulaire form input[type="submit"] {
   background: #00f;
   border: 0;
   padding: 10px 24px;
@@ -1477,7 +1474,7 @@ section {
   border-radius: 4px;
 }
 
-.formulaire .php-email-form button[type="submit"]:hover {
+.formulaire form input[type="submit"]:hover {
   background: #5faee3;
 }
 
